Bug 1160649 - Force to use wrapping in the feedback textarea

--- a/apps/settings/style/settings.css
+++ b/apps/settings/style/settings.css
@@ -904,6 +904,7 @@ ul li > label.range-icons.volume input {
   height: 10rem;
   padding: 1rem 1rem 1.2rem;
   resize: none;
+  white-space: normal;
 }
 
 #sendFeedback .pack-checkbox span {
